src/App.css
.row-header{
  margin:0px auto;
  padding:0px auto;
}

.row-content {
  margin:0px auto;
  padding: 20px 0px 20px 0px;
  border: 2px solid;
  border-radius: 10px;
  border-color: #fccd00;
}

.footer{
  background-color: #000000;
  margin:0px auto;
  padding: 20px 0px 20px 0px;
}

.navbar-dark {
  background-color: #000000;
}

.page-enter {
  opacity: 1;
  transform: translateX(0%);
}

.page-enter-active {
  opacity: 1.0;
  transform: translateX(0%);
  transition: all 0ms ease-in;
}

.page-exit {
  opacity: 1.0;
  transform: translateX(0%);
}

.page-exit-active {
  opacity: 1;
  transform: translateX(0%);
  transition: all 0ms ease-out;
}

.cal-button {
  padding: 10px;
  border: 1px solid;
  border-radius: 20px;
  color: #000;
  background-color: #f99e00;
  border-color: #fccd00;
}

.cal-button:hover {
  background-color: #fccd00;
}

ul {
  list-style-type: none;
  padding-left: 10px;
  padding-bottom: 2px;
  padding-top: 2px;
}

li {
  padding: 1px;
}

a:link, a:hover, a:visited {
  color: black;
  text-decoration: none;
}
.past-movie-title a {
  color: inherit;
}

.navigation-button {
  background-color: #f99e00;
  border-color: #fccd00;
  border-radius: 20px;
}

.navigation-button:disabled {
  background-color: #999999;
  border-color: #999999;
}

.past-movie-title {
  color: #a8a8a8;
}

.jumbotron {
  background-color: #f99e00;
}

.white-back {
  background-color: white;
  padding: 20px;
  border-radius: 10px;
}

.atcb-text {
  font-weight: 400;
}

